Todo:
- Color selector.
- Save temporary CEL in BDP format.
- Read temporary CEL if exists.
- CEL put mode (0 on hungarian keyboard).
- CEL put mode should respect the (K) and (A) buttons.
- Autosave in every 1 min.
- Configurable autosave interval.

2023.02.12
- GETCEL really copies the selected area into CELImage.
  (It saves it to a PNG on exit, to be sure.)

2023.02.10
- Added Pinnable property to tools, to differentiate between tools that can be
  selected in tool selector and the tools that cannot be selected. (The latter
  are used internally like GETCEL or PUTCEL.)
- Bugfix in BOX tool.

2023.02.02
- Added a small area showing cursor coordinates and color index under cursor.
  (Currently it is the part of Controls, but should separate it, to be visible
  even with hidden Controls.)

2023.02.01
- Drawing shapes respects the (F) button.
- Added a nice splash screen. (Turn it off in the .ini [Settings]/ShowSplash=No)

2023.01.31
- Added (F) (K) and (A) toggle buttons. (Fill shapes, clear key color and use alpha respectively)
- Cosmetics: Fix in system font in letter K and L. These were only 4 pixel width.

2023.01.30
- ESC hides controls and activates CEL picker. Right clicking in any phase will
  return controls and activates previous tool.

2023.01.27
- Using TStreamingTexture as DrawArea. It makes the FPS go over 60.
- Added secondary key mapping form zooming.

2023.01.26
- Changed vibrocolors.
- Added CEL picker. Currently you have to click on GETCEL button to activate.
- Added clipping for image drawing methods.
- Optimized render to screen.
- Added FPS counter. It seems that in lower zoom levels the fps count falls drastically.

2023.01.25
- Quit like in the original. Press Q, and click yes or no, or press Y or N.
- Key mapping added, stored and loaded from the settings.
- You can assign keys to Quit, Yes and No.
- Added keymapping to panning keys, centering and zooming.

2023.01.24
- Added tool and ink buttons.
- Clicking them changes the selection.