@@ -36,3 +36,4 @@ backup/
 *.pas;8
 *.pas;9
 *.log
+BurdockPaint.exe
