@@ -24,9 +24,10 @@
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
-        <TopLine Value="166"/>
-        <CursorPos X="22" Y="184"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="154"/>
+        <CursorPos X="2" Y="196"/>
         <UsageCount Value="106"/>
         <Loaded Value="True"/>
       </Unit>
@@ -59,18 +60,16 @@
       <Unit>
         <Filename Value="BDPPaletteUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="179"/>
         <CursorPos X="57" Y="207"/>
         <UsageCount Value="91"/>
-        <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
-        <TopLine Value="559"/>
+        <TopLine Value="357"/>
         <CursorPos X="47" Y="781"/>
         <FoldState Value=" T3lD09511241213 pq6sN0k]H PiCja04"/>
         <UsageCount Value="90"/>
@@ -115,7 +114,6 @@
         <EditorIndex Value="7"/>
         <TopLine Value="889"/>
         <CursorPos X="24" Y="949"/>
-        <FoldState Value=" T3lT065 pifjI0641117141]Ht2uO06212 PiHjF0y"/>
         <UsageCount Value="66"/>
         <Loaded Value="True"/>
       </Unit>
@@ -312,7 +310,7 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
     </Units>
-    <JumpHistory HistoryIndex="29">
+    <JumpHistory HistoryIndex="27">
       <Position>
         <Filename Value="BDPControlsUnit.pas"/>
         <Caret Line="34" TopLine="11"/>
@@ -420,14 +418,6 @@
       <Position>
         <Filename Value="BDPImageUnit.pas"/>
         <Caret Line="93" Column="6" TopLine="63"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPPaletteUnit.pas"/>
-        <Caret Line="48" Column="6" TopLine="20"/>
-      </Position>
-      <Position>
-        <Filename Value="BDPPaletteUnit.pas"/>
-        <Caret Line="207" Column="57" TopLine="179"/>
       </Position>
       <Position>
         <Filename Value="BDPImageUnit.pas"/>
